--- a/index.html
+++ b/index.html
@@ -1108,8 +1108,8 @@
                 <button data-select-item>Calculator</button>
               </li>
 
-	     <li class="filter-item">
-              <button data-filter-btn>Tic Tac Toe</button>
+	     <li class="select-item">
+              <button data-select-btn>Tic Tac Toe</button>
             </li>
 
             </ul>
