--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
               </li>
 
 	     <li class="select-item">
-              <button data-select-btn>Tic Tac Toe</button>
+              <button data-select-item>Tic Tac Toe</button>
             </li>
 
             </ul>
