--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Tic_Toc_Toe_1.jpg" loading="lazy">
+                  <img src="./assets/images/Tic_Toc_Toe_1.jpg" loading="lazy" height="1440">
                 </figure>
 
                 <h3 class="project-title">First Screen</h3>
