--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,7 @@
               </a>
             </li>
 
-<li class="project-item  active" data-filter-item data-category="tic tac toe">
+<li class="project-item  active" data-filter-item data-category="tic tac toe" height="1440">
               <a href="./assets/images/Tic_Toc_Toe_1.jpg">
 
                 <figure class="project-img">
@@ -1599,7 +1599,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Tic_Toc_Toe_1.jpg" loading="lazy" height="1440">
+                  <img src="./assets/images/Tic_Toc_Toe_1.jpg" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">First Screen</h3>
