--- a/index.html
+++ b/index.html
@@ -1303,8 +1303,22 @@
 
 
 
-<li >
+<li class="project-item  active" data-filter-item>
+              <a href="#">
 
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  
+                </figure>
+
+                <h3 class="project-title"></h3>
+
+                <p class="project-category"></p>
+
+              </a>
               
             </li>
 
