--- a/index.html
+++ b/index.html
@@ -1076,6 +1076,9 @@
               <button data-filter-btn>Tic Tac Toe</button>
             </li>
 
+	    <li class="filter-item">
+              <button data-filter-btn>Snake Game</button>
+            </li>
           </ul>
 
           <div class="filter-select-box">
@@ -1112,6 +1115,9 @@
               <button data-select-item>Tic Tac Toe</button>
             </li>
 
+	     <li class="select-item">
+              <button data-select-item>Snake Game</button>
+            </li>
             </ul>
 
           </div>
@@ -1762,7 +1768,60 @@
 
               </a>
             </li>
-           
+
+	<li class="project-item  active" data-filter-item data-category="calculator">
+              <a href="./assets/images/Snake_First_Screen.png">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Snake_First_Screen.png" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">First Screen</h3>
+
+                <p class="project-category">Snake Game</p>
+
+              </a>
+            </li>
+
+	<li class="project-item  active" data-filter-item data-category="calculator">
+              <a href="./assets/images/Snake_Second_Screen.png">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Snake_Second_Screen.png" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Second Screen</h3>
+
+                <p class="project-category">Snake Game</p>
+
+              </a>
+            </li>
+
+	<li class="project-item  active" data-filter-item data-category="calculator">
+              <a href="./assets/images/Snake_Third_Screen.png">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Snake_Third_Screen.png" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Third Screen</h3>
+
+                <p class="project-category">Snake Game</p>
+
+              </a>
+            </li>
 	</ul>
 
         </section>
