--- a/index.html
+++ b/index.html
@@ -1769,7 +1769,7 @@
               </a>
             </li>
 
-	<li class="project-item  active" data-filter-item data-category="calculator">
+	<li class="project-item  active" data-filter-item data-category="snake game">
               <a href="./assets/images/Snake_First_Screen.png">
 
                 <figure class="project-img">
@@ -1787,7 +1787,7 @@
               </a>
             </li>
 
-	<li class="project-item  active" data-filter-item data-category="calculator">
+	<li class="project-item  active" data-filter-item data-category="snake game">
               <a href="./assets/images/Snake_Second_Screen.png">
 
                 <figure class="project-img">
@@ -1805,7 +1805,7 @@
               </a>
             </li>
 
-	<li class="project-item  active" data-filter-item data-category="calculator">
+	<li class="project-item  active" data-filter-item data-category="snake game">
               <a href="./assets/images/Snake_Third_Screen.png">
 
                 <figure class="project-img">
