--- a/index.html
+++ b/index.html
@@ -752,7 +752,8 @@
 
               <p class="timeline-text">
                 It is a software project developed using Visual Studio 2008 with C# programming language for single-user use.In this project I want to try manage all departments and manage Login, Rooms, Guest, Staff, Reservation, Check in, Check out, Reservation, Bill, Logout, Reports like Total Rooms,How many Room Booked,How many Rooms Available, total profit etc.
-              </p>
+              </p><br>
+	<p style="color:white;"><b>Images:</b></p><a style="color:#FFC462; word-wrap:break-word; overflow-wrap:break-word; display:inline-block; max-width:100%" href="https://drive.google.com/drive/folders/1DYt7B3fzthg71ESy7cZRzbwx3vnJT0n6">https://drive.google.com/drive/folders/1DYt7B3fzthg71ESy7cZRzbwx3vnJT0n6</a>
 
             </li>
             <li class="timeline-item">
@@ -763,7 +764,8 @@
 
               <p class="timeline-text">
                 It is a software project developed using Visual Studio 2008 with C# programming language for single-user use.In this project we tried to convert the manual service process into the computerized service system and manage school related tasks like manage students, teacher, student attendence, teacher attendence, student fees etc.
-              </p>
+              </p><br>
+	<p style="color:white;"><b>Images:</b></p><a style="color:#FFC462; word-wrap:break-word; overflow-wrap:break-word; display:inline-block; max-width:100%" href="https://drive.google.com/drive/folders/1sYLAnypRtNkqER4v_rZK3k1jDMmuZ6Pa">https://drive.google.com/drive/folders/1sYLAnypRtNkqER4v_rZK3k1jDMmuZ6Pa</a>
 
             </li>
 
@@ -793,7 +795,8 @@
 
               <p class="timeline-text">
                 It is an Android application developed using Android Studio.It is a simple game app where two players play Tic Tac Toe.This project helped me understand how to build a fun and interactive app in Android Studio.
-              </p>
+              </p><br>
+	<p style="color:white;"><b>Images:</b></p><a style="color:#FFC462; word-wrap:break-word; overflow-wrap:break-word; display:inline-block; max-width:100%" href="https://drive.google.com/drive/folders/1sm1IgSZKeMAv0apXntPIec4IscXJyFAB">https://drive.google.com/drive/folders/1sm1IgSZKeMAv0apXntPIec4IscXJyFAB</a>
 
             </li>
 
@@ -805,14 +808,43 @@
 
               <p class="timeline-text">
 		It is an Android application built using Android Studio.It is a simple calculator app designed for single-user use.In this project,I created basic features like addition, subtraction, multiplication, and division.It was a good exercise for understanding how to build and design Android apps.
-              </p>
+              </p><br>
+	<p style="color:white;"><b>Images:</b></p><a style="color:#FFC462; word-wrap:break-word; overflow-wrap:break-word; display:inline-block; max-width:100%" href="https://drive.google.com/drive/folders/1skua9AX0rS6LARZi-U-zs3jV0cj34SY3">https://drive.google.com/drive/folders/1skua9AX0rS6LARZi-U-zs3jV0cj34SY3</a>
 
             </li>
           </ol>
 
         </section>
 
+<section class="timeline">
 
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Small Desktop Game</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+<li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Snake Game</h4>
+
+              <span>2024 — 2025</span>
+
+              <p class="timeline-text">
+                It is a simple desktop based snake game developed using the Python Programming Language and built-in libraries such as tkinter and random. It is a simple snake game designed for single-user. In this game, a snake moves inside a game area and eats apples that appears at random places. Every time the snake eats an apple, the score increases, and the snake becomes longer.
+              </p><br>
+	<p style="color:white;"><b>Images:</b></p><a style="color:#FFC462; word-wrap:break-word; overflow-wrap:break-word; display:inline-block; max-width:100%" href="https://drive.google.com/drive/folders/1uvoRK5N0b4X_Q6o5HYHH1rzGHsRwL-RB">https://drive.google.com/drive/folders/1uvoRK5N0b4X_Q6o5HYHH1rzGHsRwL-RB</a>
+
+            </li>
+
+        
+          </ol>
+
+        </section>
         <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
